README.md 타이틀 글자 크기 수정

--- a/database/정규화.md
+++ b/database/정규화.md
@@ -1,4 +1,4 @@
-## 정규화(Normalization)
+# 정규화(Normalization)
 
 - 정규화의 기본 목표는 **테이블 간의 중복 데이터를 허용하지 않는 것이다.** 중복된 데이터를 허용하지 않음으로써 **무결성을 유지할 수 있으며, DB 의 저장 용량 역시 줄일 수 있다.**
 
